# personal-knowledgebase

./: .gitignore  README.md  docs-architecture.md  docs-event-protocol.md  pyproject.toml
kb/api/: main.py
kb/cli/: main.py
kb/core/: bootstrap.py  db.py  repository.py  settings.py
kb/ingest/: collect_projects.py  event_bridge.py  importer.py  normalize.py
knowledge-store/db/: schema.sql
web/: index.html
